# drf-aggregation

./: Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
drf_aggregation/: __init__.py  aggregates.py  aggregation.py  enums.py  filters.py  helpers.py  mixins.py  routers.py  settings.py  types.py  utils.py  viewsets.py
drf_aggregation/_filters/: column_index.py  truncate_date.py
drf_aggregation/aggregations/: common.py  percent.py  percentile.py
drf_aggregation/filters/: __init__.py  column_index.py  truncate_date.py
tests/: fixtures.py  models.py  settings.py  test_aggregation.py  test_data.py  test_simple.py  urls.py  views.py  viewsets.py
tests/migrations/: 0001_initial.py
