# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf_aggregation"
dynamic = ["version"]
description = "Get DB aggregations using Django ORM"
readme = "README.md"
authors = [{ name = "Nikita Balobanov", email = "kit-oz@ya.ru" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["django", "aggregation", "django-rest-framework", "django-orm"]
dependencies = ["django >= 3.0.0"]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
  "djangorestframework~=3.12",
  "drf-complex-filter~=1.0",
  "parameterized~=0.7",
]

[project.urls]
Homepage = "https://github.com/kit-oz/drf-aggregation"

[tool.setuptools_scm]
