[metadata]
name = drf_aggregation
author = Nikita Balobanov
author-email = kit-oz@ya.ru
summary = DRF ViewSet mixin for getting aggregations
license = MIT
description-file = README.rst
home-page = https://github.com/kit-oz/drf-aggregation
requires-python = >= 3.8
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3


[files]
packages = drf_aggregation


[options]
python_requires = >=3.8
install_requires =
    django
